--- a/demos/index.html
+++ b/demos/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>jQuery Countdown plugin demos</title>
 <script type="text/javascript" src="../external/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="../src/jquery.countdown.js"></script>
+<script type="text/javascript" src="../jquery.countdown.js"></script>
 <script type="text/javascript">
 $(function () {
    $( "#countdown-1" ).countdown({
